--- a/calico-cloud/get-started/upgrade-cluster.mdx
+++ b/calico-cloud/get-started/upgrade-cluster.mdx
@@ -7,7 +7,7 @@ description: Steps to upgrade to the latest version of Calico Cloud.
 To upgrade managed clusters to the latest version of {{prodname}}:
 
 1. In Manager UI, go to **Managed Clusters**.
-1. Click the **Actions** link on the cluster you want to reinstall, and then select  **ReInstall**.
+1. For the cluster you want to upgrade, select **Actions** > **Reinstall**.
 1. Select the version of {{prodname}} you want to install, you can select the currently installed version, or any newer supported version
    :::note
 
