--- a/calico-cloud_versioned_docs/version-3.17/get-started/connect/install-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/get-started/connect/install-cluster.mdx
@@ -26,7 +26,7 @@ Choose your install option and follow the steps.
 
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
-1. Select the version of {{prodname}} you want to install, we recommend the latest version, which is selected by default
+1. (Optional) If you must install a specific older release, select the {{prodname}} version you want to install. We always recommend the latest version, which is installed by default.
    :::note
 
    Currently the only option available to install is the latest version. More versions will become available as newer versions are released
@@ -56,7 +56,7 @@ Choose your install option and follow the steps.
 
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
-1. Select the version of {{prodname}} you want to install, we recommend the latest version, which is selected by default
+1. (Optional) If you must install a specific older release, select the {{prodname}} version you want to install. We always recommend the latest version, which is installed by default.
    :::note
 
    Currently the only option available to install is the latest version. More versions will become available as newer versions are released
