--- a/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
@@ -16,13 +16,9 @@ Protect cloud-native applications from application layer attacks with {{prodname
 
 ## Value
 
-A web application firewall (WAF) protects web applications from a variety of application layer attacks such as [cross-site scripting (XSS)](https://www.f5.com/services/resources/glossary/cross-site-scripting-xss-or-css), [SQL injection](https://www.f5.com/services/resources/glossary/sql-injection), and [cookie poisoning](https://www.f5.com/services/resources/glossary/cookie-poisoning), among others. Given that attacks on apps are the [leading cause of breaches](https://www.f5.com/labs/articles/threat-intelligence/application-protection-report-2019--episode-2--2018-breach-trend), you need to protect the HTTP traffic that provides a gateway to valuable app data.
+Our workload-centric Web Application Firewall (WAF) protects your workloads from a variety of application layer attacks originating from within your cluster such as [SQL injection](https://owasp.org/www-community/attacks/SQL_Injection). Given that attacks on apps are the [leading cause of breaches](https://www.f5.com/labs/articles/threat-intelligence/application-protection-report-2019--episode-2--2018-breach-trend), you need to secure the HTTP traffic inside your cluster.
 
 Historically, web application firewalls (WAFs) were deployed at the edge of your cluster to filter incoming traffic. Our workload-based WAF solution takes a unique, cloud-native approach to web security by allowing you to implement zero-trust rules for workloads inside your cluster.
-
-{{prodname}} WAF allows you to selectively run service traffic within your cluster, and protect intra-cluster traffic from common HTTP-layer attacks such as SQL injection, and cross-site request forgery. To increase protection, you can use {{prodname}} network policies to enforce security controls on selected pods on the host.
-
-In addition to protecting against application layer attacks, any blocked HTTP requests are logged and available in Elasticsearch for review. You can also create global alerts based on these logs.
 
 ## Features
 
@@ -34,10 +30,18 @@ This how-to-guide uses the following {{prodname}} features:
 
 ### About {{prodname}} WAF
 
-WAF is deployed in your cluster as an Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard 
-[ModSecurity module](https://owasp.org/www-project-modsecurity-core-rule-set/). To view the rule set that is bundled with WAF, see [rule-set](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/modsec-core-ruleset).
+WAF is deployed in your cluster along with Envoy DaemonSet. {{prodname}} proxies selected service traffic through Envoy, checking HTTP requests using the industry-standard 
+[ModSecurity](https://owasp.org/www-project-modsecurity-core-rule-set/) with OWASP CoreRuleSet v3.4 modified for kubernetes workloads. To review the rules deployed with the WAF, see [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/modsec-core-ruleset).
 
-You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. You can view WAF events as HTTP logs in Service Graph and Kibana. And you can set up global alerts to get notifications on the Alerts page. 
+You simply enable WAF in Manager UI, and determine the services that you want to enable for WAF protection. By default WAF is set to `DetectionOnly` so no traffic will be denied until you are ready to turn on blocking mode. 
+
+Every request that WAF finds an issue with, will result in a Security Event being created for [you to review in the UI](#view-waf-events), regardless of whether the traffic was allowed or denied. This can greatly help in tuning later.  
+
+#### How WAF determines if a request should be allowed or denied
+
+If you configure WAF in blocking mode, WAF will use something called [anomaly scoring mode](https://coreruleset.org/docs/concepts/anomaly_scoring/) to determine if a request is allowed with `200 OK` or denied `403 Forbidden`. 
+
+This works by matching a single HTTP request against all the configured WAF rules. Each rule has a score and WAF adds all the matched rule scores together, and compares it to the overall anomaly threshold score (100 by default). If the score is under the threshold the request is allowed and if the score is over the threshold the request is denied. Our WAF starts in detection mode only and with a high default scoring threshold so is safe to turn on and then [fine-tune the WAF](#fine-tuning-your-waf) for your specific needs in your cluster.
 
 ## Before you begin
 
@@ -74,40 +78,19 @@ Enabling WAF for certain system services may result in an undesired cluster stat
   - name: `openshift`, namespace: `default`
   - name: `gatekeeper-webhook-service`, namespace: `gatekeeper-system`
 
-The rules are not overridden during upgrade, you will have to manage deploying updates of the OWASP CoreRuleSet to your cluster over time. 
+The rules are not overridden during upgrade, you will have to manage deploying updates to the OWASP CoreRuleSet to the cluster over time. 
 
-If you modify rules, it is recommended to keep your main version in git or similar version control systems. If you enable WAF, modify rules, and then disable WAF again then the rule modifications will be lost. 
+If you modify the rules, it is recommended to keep your rules in git or similar source control systems.
 
 :::
 
 ## How to
 
-- [How WAF works](#how-waf-works)
 - [Enable WAF on your cluster](#enable-waf)
 - [Apply WAF to your services](#apply-waf)
 - [View WAF events](#view-waf-events)
 - [Fine-tuning your WAF](#fine-tuning-your-waf)
 - [Disable WAF feature from your cluster](#disable-waf-feature-from-your-cluster)
-
-### How WAF works 
-You choose the traffic you want to monitor and then we proxy it through our WAF, integrated with our Envoy daemonset. No traffic will be denied by default. However, if you decide to turn blocking mode on, then the WAF uses something called [anomaly scoring mode](https://coreruleset.org/docs/concepts/anomaly_scoring/) to determine if a request is allowed with `200 OK` or denied `403 Forbidden`. 
-
-WAF can match multiple different rules in a single HTTP request. Each rule has a score associated with it and by adding these scores together, the WAF decides to allow or deny traffic by comparing the total to the overall anomaly threshold score (100 by default). If the score is under the threshold the request is allowed and if the score is over the threshold the request is denied. Our WAF starts in detection mode only and with a high default scoring threshold so is safe to turn on and then [fine-tune the WAF](#fine-tuning-your-waf) for your specific needs in your cluster.
-
-A Security Event is created for [you to review in the UI](#view-waf-events) for every request in which WAF detects a rule match, regardless of whether it was ultimately allowed or denied. This can greatly help in tuning later.  
-
-:::note
-These are the default scoring points for each severity level, applied to each rule.
-
-- CRITICAL severity: Anomaly Score of 5.
-    Mostly generated by the application attack rules (93x and 94x files).
-- ERROR severity: Anomaly Score of 4.
-    Generated mostly from outbound leakage rules (95x files).
-- WARNING severity: Anomaly Score of 3.
-    Generated mostly by malicious client rules (91x files).
-- NOTICE severity: Anomaly Score of 2.
-    Generated mostly by the protocol rules (92x files).
-:::
 
 ### Enable WAF
 
@@ -119,10 +102,10 @@ we recommend that you install the [GoogleCloudPlatform/microservices-demo app](h
 kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/release/v0.7.0/release/kubernetes-manifests.yaml
 ```
 
-#### Enable WAF using CLI
+#### Enable WAF using the CLI
 
 ##### Enable the Policy Sync API in Felix
-To enable WAF using the CLI, or you have not yet [configured L7 logs](../visibility/elastic/l7/Configure), you must enable the Policy Sync API in Felix. To do this cluster-wide,
+To enable WAF using the CLI, you must enable the Policy Sync API in Felix. To do this cluster-wide,
 modify the `default` FelixConfiguration to set the field `policySyncPathPrefix` to `/var/run/nodeagent`:
 
 ```bash
@@ -156,7 +139,7 @@ On the Manager UI, click **Threat Defense**, **Web Application Firewall**, **Con
 
 ### Apply WAF to services
 
-Now that you have deployed WAF in your cluster, you can select the services you wish to be protected from application layer attacks. 
+Now that you have deployed WAF in your cluster, you can select the services you want to protect from application layer attacks. 
 
 If you have deployed the sample application, you can apply WAF on a service associated with your app, as follows:
 ```bash
@@ -165,7 +148,7 @@ kubectl annotate svc frontend -n default --overwrite projectcalico.org/l7-loggin
 Alternatively, you can use the Manager UI to apply WAF to the `frontend` service.
 
 In this example, we applied WAF to the `frontend` service. This means that every request that goes through the `frontend` service is inspected.
-However, the traffic is not blocked because the WAF rule is set to `DetectionOnly` by default. You can then begin [fine-tuning your WAF](#fine-tuning-your-waf). 
+However, the traffic is not blocked because the WAF rule is set to `DetectionOnly` by default. You can then begin [fine-tuning your WAF](). 
 
 In the previous example, we applied WAF to the `frontend` service of the sample application. Here, we are
 applying WAF to a service of your own application.
@@ -186,9 +169,10 @@ applying WAF to a service of your own application.
 You have now applied WAF rule sets to your own services, and note that the traffic that goes through the selected services will be alerted but not blocked by default.
 
 #### Trigger a WAF event
-If you would like to trigger a WAF event for testing purposes, you can simulate an SQL Injection attack inside your cluster by crafting a request with a query string that will trigger WAF. 
+If you would like to trigger a WAF event for testing purposes, you can simulate an SQL injection attack inside your cluster by crafting a HTTP request with a query string that WAF will detect as an SQL injection attempt. 
+The query string in this example has some SQL syntax embedded in the text. This is harmless and for demo purposes, but WAF will detect this pattern and create an event for this HTTP request. 
 
-Run this curl command from any pod inside your cluster targeting a service you have selected for WAF protection above e.g. from the demo app above
+Run a simple curl command from any pod inside your cluster targeting a service you have selected for WAF protection e.g. from the demo app above we could attempt to send a simple HTTP request to the cartservice.
 ```
   curl http://cartservice/cart?artist=0+div+1+union%23foo*%2F*bar%0D%0Aselect%23foo%0D%0A1%2C2%2Ccurrent_user
 ```
@@ -198,16 +182,16 @@ Run this curl command from any pod inside your cluster targeting a service you h
 #### Manage your rules
 The default rulesets work fine for most deployments. However, you can customize them to suit your requirements.
 
-By default, {{prodname}} ships with CoreRuleset v3.x with the following setup files pre-loaded:
+By default, {{prodname}} ships with CoreRuleset v3.4 with the following setup files pre-loaded:
 
 - [modsecdefault.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/modsec-core-ruleset/modsecdefault.conf)
 - [crs-setup.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/modsec-core-ruleset/crs-setup.conf)
 - [Ruleset files](https://github.com/tigera/operator/tree/master/pkg/render/applicationlayer/modsec-core-ruleset)
 
 There are two ways to edit your rules. 
-1. Edit the configmap in-place in your cluster using kubectl. The config map combines all the rule files together so you will need to know how to search and find the exact place in the configmap that you want to update. 
+1. Edit the configmap directly using kubectl. The config map combines all the rule files together, so you will need to know how to search and find the exact place in the configmap that you want to update. 
 
-2. If you want to modify the rules in any meaningful way, it is recommended that you download the files locally and modify before replacing the configmap. In OWASP, it is recommended you disable rules or change configuration by modifying a set of specific metadata files and exclusion files, and not modify any of the main rule files directly. You can, of course, decide to replace the ruleset entirely with your own set of custom rules. This is completely fine once the rules are written in the same SecRule syntax understood by ModSecurity. We recommend you keep a version of your rule files safe in version control like git. Enabling / disabling WAF will override any changes in the ruleset with the default settings. 
+2. If you want to modify the rules in any meaningful way, it is recommended that you download the files locally and modify before replacing the configmap. In OWASP, it is recommended you disable rules or change configuration by modifying a set of specific metadata files and exclusion files, and not modify any of the main rule files directly. You can, of course, decide to replace the ruleset entirely with your own set of custom rules. This is completely fine once the rules are written in the same SecRule syntax understood by ModSecurity. We recommend you keep a version of your rule files safe in version control like git.
 
 To download and modify the rule files:
 
@@ -221,7 +205,7 @@ To download and modify the rule files:
   ```bash
   cd pkg/render/applicationlayer/modsec-core-ruleset
   ```
-3. Make the changes you want in the setup, conf or exclusion files and save.
+3. Make the changes you want in the setup, conf or exclusiong files and save.
 4. Create a ConfigMap.
 
   ```bash
@@ -247,30 +231,26 @@ you deploy it to make sure it’s right for your environment.
 
 
 #### Set WAF rule to block traffic
-By default WAF will not block a request even if it has matching rule violations. The rule engine is set to `DetectionOnly`. You can change this behaviour so that the traffic is blocked instead resulting in a HTTP response code `403 Forbidden` - if the rules triggered score over a certain threshold. 
+By default WAF will not block a request even if it has matching rule violations. The rule engine is set to `DetectionOnly`. You can configure to block traffic instead with an `HTTP 403 Forbidden` response status code when the combined matched rules scores exceed a certain threshold. 
 
 1. Edit the configmap: 
    ```bash
    kubectl edit cm -n tigera-operator modsecurity-ruleset
    ```
 2. Look for `SecRuleEngine DetectionOnly` and change it to `SecRuleEngine On`.
-3. Save the changes which triggers a rolling update of the L7 pods. 
+3. Save your changes. This triggers a rolling update of the L7 pods. 
 
 | Action | Description                                                                                                                                                             | Disruptive? |
 | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------- |
 | DetectionOnly | Traffic is not denied nor dropped. {{prodname}}  will log events. | No
-| On     | Denies HTTP traffic. {{prodname}}  will log the event in Elasticsearch. | Yes          |
-| Off    | Be cautious about using this option. Traffic is not denied nor alerted. |No                                                                      | Yes         |                                         
+| On     | Denies HTTP traffic. {{prodname}}  will log the event in Security Events. | Yes          |
+| Off    | Be cautious about using this option. Traffic is not denied, and there are no events. |No                                                                      | Yes         |                                         
 
 #### Change anomaly scoring threshold 
 
-The default threshold is set to 100, a high value that is unlikely to result in blocked reuqests, even if blocking mode is enabled. This is the recommended starting point from OWASP. You are encouraged to fine-tune and lower this threshold value iteratively until you are happy with the requests being allowed and denied for your cluster. Like most default values you can find this setting in the crs-setup.conf file. You can edit directly in the configmap as follows:
+The default scoring threshold is set to 100, a high value that is unlikely to result in blocked requests, even if blocking mode is enabled. A critical rule violation scores 5 by default so a single HTTP request would need many rule violations to pass the default threshold of 100. You are encouraged to fine-tune and lower this threshold value iteratively until you are happy with the requests being allowed and denied for your cluster. 
 
-:::note
-The lower the anomaly scoring threshold value is, the more likely it is that traffic will be denied. 
-:::
-
-1. Edit the crs-setup.conf file and set the `tx.inbound_anomaly_score_threshold` to the value of your choice: 
+1. Edit the `crs-setup.conf` file and set `tx.inbound_anomaly_score_threshold` to the value of your choice: 
    ```bash
      SecAction \
       "id:900110,\
@@ -281,16 +261,28 @@ The lower the anomaly scoring threshold value is, the more likely it is that tra
       setvar:tx.inbound_anomaly_score_threshold=100,\
       setvar:tx.outbound_anomaly_score_threshold=100"
    ```
+:::note
+These are the default scoring points for each severity level, applied to each rule.
+
+- CRITICAL severity: Anomaly Score of 5.
+    Mostly generated by the application attack rules (93x and 94x files).
+- ERROR severity: Anomaly Score of 4.
+    Generated mostly from outbound leakage rules (95x files).
+- WARNING severity: Anomaly Score of 3.
+    Generated mostly by malicious client rules (91x files).
+- NOTICE severity: Anomaly Score of 2.
+    Generated mostly by the protocol rules (92x files).
+
+The lower the anomaly scoring threshold value is, the more likely it is that traffic will be denied. 
+:::
 
 #### Change other default settings
 
-The CoreRuleSet has several default values and settings that you can fine-tune. Example: Rule 920420 checks the HTTP request Content-Type header against a list of allowed values. You may want to allow traffic through the WAF that has a certain Content-Type that is not allowed by default, e.g. you may have Content-Types in your micro-services workloads that are not allowed by default. Like most default values you can find the list of allowed Content-Type values in the crs-setup.conf file.
+The CoreRuleSet has several default values and settings that you can fine-tune. Example: Rule 920420 checks the HTTP request Content-Type header against a list of allowed values. You may want to allow traffic through the WAF that has a certain Content-Type that is not allowed by default, e.g. you may have Content-Types in your micro-services workloads that are not allowed by default. 
 
-1. Edit the crs-setup.conf file and add a new Content-Type by modifying id:900220 and appending to the default list named `tx.allowed_request_content_type`
+1. Edit the `crs-setup.conf` file and add a new Content-Type by modifying `id:900220` and appending to the default list named `tx.allowed_request_content_type`
 
   ```bash
-    # Uncomment this rule to change the default.
-    #
     SecAction \
      "id:900220,\
       phase:1,\
@@ -302,18 +294,18 @@ The CoreRuleSet has several default values and settings that you can fine-tune. 
 
 #### Disable certain rules 
 
-You may want to disable a rule entirely. For example, if you find the allowed Content-Type rule mentioned above (rule ID 920420) too restrictive you can disable it unconditionally by changing RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example and renaming that file to remove the .example:
+You may want to disable a rule entirely. For example, if you find the allowed Content-Type rule mentioned above too restrictive, you can disable it unconditionally by changing `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` and renaming that file to remove the `.example`:
 
-1. Edit RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example and add the rule ID you want to disable
+1. Edit `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` and add the rule ID you want to disable
 
   ```bash
   SecRuleRemoveById 920420
   ```
-3. Rename RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example to RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf removing the *.example* in order for ModSecurity to load the file
+2. Rename `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf.example` to `RESPONSE-999-EXCLUSION-RULES-AFTER-CRS.conf` removing the *.example* in order for ModSecurity to load the file.
 
 ### View WAF events
 
-#### Threat defense
+#### Security Events
 
 To view WAF events in a centralized security events dashboard, go to: **Threat defense**, **Security Events**. For help, see [Security Event Management](../threat/security-event-management).
 
@@ -321,10 +313,7 @@ To view WAF events in a centralized security events dashboard, go to: **Threat d
 
 To view WAF events In Kibana:
 
-1. Create the `tigera_secure_ee_waf*` index pattern. For help with index patterns, see [Kibana index pattern](../visibility/kibana).
-
-2. Select the `tigera_secure_ee_waf*` index pattern. 
-
+1. Select the `tigera_secure_ee_waf*` index pattern. 
 
 #### Disable WAF for a service
 
