--- a/calico-enterprise_versioned_docs/version-3.17/network-policy/get-started/kubernetes-network-policy.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/network-policy/get-started/kubernetes-network-policy.mdx
@@ -94,7 +94,7 @@ In the following example, incoming traffic is allowed only if they come from a p
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-same-namespace
+  name: allow-different-namespace
   namespace: default
 spec:
   podSelector:
