--- a/calico_versioned_docs/version-3.24/network-policy/get-started/kubernetes-policy/kubernetes-network-policy.mdx
+++ b/calico_versioned_docs/version-3.24/network-policy/get-started/kubernetes-policy/kubernetes-network-policy.mdx
@@ -94,7 +94,7 @@ In the following example, incoming traffic is allowed only if they come from a p
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-same-namespace
+  name: allow-different-namespace
   namespace: default
 spec:
   podSelector:
