--- a/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
@@ -46,7 +46,7 @@ For more information, see [Security event management](../threat/security-event-m
 ### Security updates
 
 * Runtime security upgraded to [golang 1.20.7](https://go.dev/doc/devel/release#go1.20.7), which includes security updates.
-* We rebuilt `cc-operator` and `cc-cni-config-scanner`, which has significantly reduced the number of CVEs.
+* We rebuilt `cc-operator` and `cc-cni-config-scanner`, which has reduced the number of CVEs.
 
 ## Calico Cloud 17.0.0
 
