--- a/calico-enterprise/operations/cnx/configure-identity-provider.mdx
+++ b/calico-enterprise/operations/cnx/configure-identity-provider.mdx
@@ -326,6 +326,7 @@ Most IdPs require redirect URIs to be allowed to redirect users at the end of th
 - When you encounter problems while configuring your IdP, we encourage you to use the network tab of the browser dev tools to inspect requests with error codes and to decode authorization headers of the HTTP requests.
 - If you would like to bring a self-signed certificate for your IdP and are using OIDC, you can do so by adding the field `rootCA` to secret `tigera-oidc-credentials`. The value for this field should contain the certificate in PEM format.
 - If logging into Kibana fails with a `cookie not present` error, update the browser settings to allow third-party cookies, as {{prodname}} Manager UI uses Kibana's cookies during login.
+- If you need to configure LDAP with a DN that has spaces, use double quotes to escape them. For example: `cn="example common name",ou="example org unit",DC=example,DC=org`.
 
 ## Additional resources
 
