--- a/calico-cloud_versioned_docs/version-3.17/get-started/connect/setup-private-registry.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/get-started/connect/setup-private-registry.mdx
@@ -113,8 +113,8 @@ IMAGEPATH=""
 | ------------------------------------------------------------------------- | -------------- | ------------- | ---------------------------------------------------- |
 | `quay.io/tigera/typha:v1.2.3`                                             | `my.registry/` |               | `my.registry/tigera/typha:v1.2.3`                    |
 | `quay.io/tigera/typha:v1.2.3`                                             | `my.registry/` | `custom-path` | `my.registry/custom-path/typha:v1.2.3`               |
-| `us-docker.pkg.dev/tigera-prod-01/calico-cloud-public/cc-operator:v4.5.6` | `my.registry/` |               | `my.registry/calico-cloud-public/cc-operator:v4.5.6` |
-| `us-docker.pkg.dev/tigera-prod-01/calico-cloud-public/cc-operator:v4.5.6` | `my.registry/` | `custom-path` | `my.registry/custom-path/cc-operator:v4.5.6`         |
+| `quay.io/tigera/cc-operator:v4.5.6`                                       | `my.registry/` |               | `my.registry/tigera/cc-operator:v4.5.6`              |
+| `quay.io/tigera/cc-operator:v4.5.6`                                       | `my.registry/` | `custom-path` | `my.registry/custom-path/cc-operator:v4.5.6`         |
 
 ### Copy images to your registry
 
